[gd_scene load_steps=4 format=3 uid="uid://dqtac4737yusy"]

[ext_resource type="Texture2D" uid="uid://p4fh5a3g0rxx" path="res://slay_the_wc/Assets/Art/template_panda_vide.png" id="1_ixlqc"]
[ext_resource type="Script" uid="uid://dx30ejyxas2mb" path="res://slay_the_wc/Cards/UICard/UiCard.gd" id="1_u6gpl"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ixlqc"]
load_path = "res://.godot/imported/3d6.png-7d39bce6bc6d66af067f1dab2489e9e5.ctex"

[node name="UiCard" type="AspectRatioContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -900.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
ratio = 0.705
script = ExtResource("1_u6gpl")

[node name="DebugColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
color = Color(0.14044744, 0.14044744, 0.14044744, 1)

[node name="CardBg" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_ixlqc")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CardBg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="MarginTop" type="Control" parent="CardBg/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CardBg/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.95
mouse_filter = 2
theme_override_constants/separation = 0

[node name="MarginLeft" type="Control" parent="CardBg/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CardBg/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9
mouse_filter = 2
theme_override_constants/separation = 0

[node name="IllustrationControl" type="Control" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 2

[node name="CardIllustration" type="TextureRect" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/IllustrationControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
mouse_filter = 2
texture = SubResource("CompressedTexture2D_ixlqc")
expand_mode = 1
stretch_mode = 5

[node name="CostLabel" type="Label" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/IllustrationControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 463)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 42
text = "COST"
vertical_alignment = 2

[node name="Control" type="Control" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35
mouse_filter = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_right = 0.975
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
mouse_filter = 2

[node name="NameScroll" type="ScrollContainer" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer2/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.99
anchor_bottom = 0.95
size_flags_vertical = 3
size_flags_stretch_ratio = 0.72
horizontal_scroll_mode = 0

[node name="Name" type="Label" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer2/Control/NameScroll"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 28
text = "NAME OF THE CARD
NAME OF THE CARD
NAME OF THE CARD
NAME OF THE CARD"
autowrap_mode = 2

[node name="Control2" type="Control" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 2

[node name="DescriptionScroll" type="ScrollContainer" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer2/Control2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.99
anchor_bottom = 1.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.72
horizontal_scroll_mode = 0

[node name="Description" type="Label" parent="CardBg/VBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer2/Control2/DescriptionScroll"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 21
text = "DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet DESCRIPTION lorem ipsum dolor sit amet "
autowrap_mode = 2
autowrap_trim_flags = 128

[node name="MarginRight" type="Control" parent="CardBg/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.04
mouse_filter = 2

[node name="MarginBottom" type="Control" parent="CardBg/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
mouse_filter = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="mouse_entered" from="CardBg" to="." method="_on_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
